--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -30,7 +30,7 @@
     </div>
   </header>
 <!-- header ends here -->
-
+ 
 <div class="container py-md-5">
 
   <% errors.forEach(function(message) { %>
@@ -44,6 +44,10 @@
     </div>
     <div class="col-lg-5 pl-lg-5 pb-3 py-lg-5">
       <form action="/register" method="POST" id="registration-form">
+
+        <% regErrors.forEach(function(message) { %>
+          <div class="alert alert-danger small"><%= message %></div>
+        <% }) %>
 
           <div class="form-group">
             <label for="username-register" class="text-muted mb-1"><small>Username</small></label>
