--- a/views/single-post-screen.ejs
+++ b/views/single-post-screen.ejs
@@ -12,8 +12,8 @@
     </div>
       
     <p class="text-muted small mb-4">
-      <a href="#"><img class="avatar-tiny" src=<%= post.author.avatar %>></a>
-      Posted by <a href="#"><%= post.author.username %></a> on <%= post.createdDate.getDate()%>/<%= post.createdDate.getMonth() + 1%>/<%= post.createdDate.getFullYear()%></p>
+      <a href="/profile/<%= user.username %>"><img class="avatar-tiny" src=<%= post.author.avatar %>></a>
+      Posted by <a href="/profile/<%= user.username %>"><%= post.author.username %></a> on <%= post.createdDate.getDate()%>/<%= post.createdDate.getMonth() + 1%>/<%= post.createdDate.getFullYear()%></p>
 
     <div class="body-content">
       <%= post.body %>
