--- a/views/home-guest.ejs
+++ b/views/home-guest.ejs
@@ -2,9 +2,7 @@
  
 <div class="container py-md-5">
 
-  <% errors.forEach(function(message) { %>
-    <div class="alert alert-danger text-center"><%= message %></div>
-  <% }) %>
+  <%- include('includes/flash') %>
 
   <div class="row align-items-center">
     <div class="col-lg-7 py-3 py-md-5">
@@ -15,7 +13,7 @@
       <form action="/register" method="POST" id="registration-form">
 
         <% regErrors.forEach(function(message) { %>
-          <div class="alert alert-danger small"><%= message %></div>
+          <div class="alert alert-danger text-center"><%= message %></div>
         <% }) %>
 
           <div class="form-group">
